--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.131.28",
+    "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12",
     "zod": "^4.1.5"
   },
