--- a/backend/package.json
+++ b/backend/package.json
@@ -21,15 +21,15 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "nodemailer": "^7.0.6"
-  },
-  "devDependencies": {
+    "nodemailer": "^7.0.6",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
-    "@types/nodemailer": "^7.0.1",
+    "@types/nodemailer": "^7.0.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
