refactor: update backend configuration and dependencies
- Change main entry point to dist/server.js in package.json
- Update dependencies and devDependencies versions in package.json
- Modify import statements in server.ts to use .js extensions
- Adjust tsconfig.json to include server.ts and modify rootDir settings

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,7 +2,7 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    // "rootDir": "./src",
     "outDir": "./dist",
 
     // Environment Settings
@@ -12,7 +12,7 @@
     // "types": [],
     // For nodejs:
     "lib": ["esnext"],
-    // "types": ["node"],
+    "types": ["node"],
     // and npm install -D @types/node
 
     // Other Outputs
@@ -41,6 +41,6 @@
     // "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["server.ts" , "src"],
   "exclude": ["node_modules"]
 }
