fix: Enable TypeScript types for Node.js in tsconfig.json

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,9 +12,9 @@
     // "types": [],
     // For nodejs:
     "lib": ["esnext"],
-    // "types": ["node"],
+    "types": ["node"],
     // and npm install -D @types/node
-
+   
     // Other Outputs
     "sourceMap": true,
     "declaration": true,
