--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,7 @@
     // "types": [],
     // For nodejs:
     "lib": ["esnext"],
-    "types": ["node"],
+    "types": ["node", "express", "mongoose", "nodemailer"],
     // and npm install -D @types/node
    
     // Other Outputs
