fix: Remove unused TypeScript types for express, mongoose, and nodemailer in tsconfig.json

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,7 @@
     // "types": [],
     // For nodejs:
     "lib": ["esnext"],
-    "types": ["node", "express", "mongoose", "nodemailer"],
+    "types": ["node"],
     // and npm install -D @types/node
    
     // Other Outputs
@@ -41,6 +41,6 @@
     // "moduleDetection": "force",
     "skipLibCheck": true
   },
-  "include": ["server.ts" , "src"],
+  "include": [ "src"],
   "exclude": ["node_modules"]
 }
