fix: Update server and app scripts for consistency and add missing environment import

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "main": "dist/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --exec tsx server.ts",
+    "dev": "nodemon --watch src --exec tsx src/app.ts",
     "build": "npm install && tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/app.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
